<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    
    <EditText
        android:id="@+id/login"
        style="@style/input"
        android:layout_toRightOf="@id/login_label"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        style="@style/input"
        android:layout_below="@id/login"
        android:layout_toRightOf="@id/password_label"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/connect" />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />
    <Button
        android:id="@+id/register_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:text="@string/register_facebook" />

</RelativeLayout>