<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        style="@style/input"
        android:layout_toRightOf="@id/email_label"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/first_name"
        style="@style/input"
        android:layout_below="@id/email"
        android:layout_toRightOf="@id/first_name_label"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/name"
        style="@style/input"
        android:layout_below="@id/first_name"
        android:layout_toRightOf="@id/name_label"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phone"
        style="@style/input"
        android:layout_below="@id/name"
        android:layout_toRightOf="@id/phone_label"
        android:inputType="phone" >
    </EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:text="@string/register" />

</RelativeLayout>