<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/mainList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/search"
            style="@style/footer_selected"
            android:drawableTop="@drawable/ic_search"
            android:text="@string/search" />

        <TextView
            android:id="@+id/my_spaces"
            style="@style/footer"
            android:text="@string/my_spaces" />

        <TextView
            android:id="@+id/my_account"
            style="@style/footer"
            android:text="@string/my_account" />
    </LinearLayout>

</RelativeLayout>